# interlinked

./: .gitignore  interlinked_c4_level1.puml  readme.md
contracts/interlinked/: Cargo.toml  Makefile
contracts/interlinked/src/: api_key.rs  contract.rs  custom_account.rs  error.rs  groth16_bls12_381.rs  lib.rs  shortener.rs  storage.rs  upgrade.rs  zk_verifier.rs
contracts/uml/: interlinked_admin_activities.puml  interlinked_c4_level2.puml  interlinked_tenant_activities.puml  interlinked_user_activities.puml
privacy-gateway/: README.md  circuits.json  fix_snarkjs_path.ps1  package-lock.json  package.json  prove.ps1  prove.sh
privacy-gateway/circuits/: verify_investor_jurisdiction.circom  verify_link_access.circom
privacy-gateway/inputs/: verify_investor_jurisdiction.json  verify_link_access.json
privacy-gateway/scripts/: circuit_meta.mjs  encode_for_soroban.mjs  poseidon255.mjs  prepare_witness_input.mjs
