[package]
name = "interlinked"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
]

[workspace.dependencies]
soroban-sdk = "22"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "22.0.0-rc.3.2", default-features = false, features = ["alloc"]   }
log = "0.4.25"

[dev-dependencies]
soroban-sdk = { version = "22.0.0-rc.3.2", features = ["testutils"] }