[package]
name = "interlinked"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
]

[workspace.dependencies]
soroban-sdk = "22"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "22.0.0-rc.3.2", default-features = false, features = ["alloc"]   }
serde = { version = "1.0.217", features = ["derive"] }
serde-json-core = { version = "0.6.0", default-features = false }


[dev-dependencies]
soroban-sdk = { version = "22.0.0-rc.3.2", features = ["testutils"] }